src/objects/LogEntryTag__c.object
<CustomObject>
    <fields>
        <fullName>LogEntryOrigin__c</fullName>
        <formula>LogEntry__r.Origin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log Entry Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogEntryTimestamp__c</fullName>
        <formula>LogEntry__r.Timestamp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log Entry Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LogEntry__c</fullName>
        <label>Log Entry</label>
        <referenceTo>LogEntry__c</referenceTo>
        <relationshipLabel>Log Entry Tags</relationshipLabel>
        <relationshipName>LogEntryTags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LogLink__c</fullName>
        <formula>HYPERLINK(
  LogEntry__r.Log__c,
  LogEntry__r.Log__r.Name,
  &apos;_top&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedByUsernameLink__c</fullName>
        <formula>LogEntry__r.LoggedByUsernameLink__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <label>Logger Tag</label>
        <referenceTo>LoggerTag__c</referenceTo>
        <relationshipLabel>Tagged Log Entries</relationshipLabel>
        <relationshipName>LogEntryTags</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <description>An external ID field used to ensure that Log Entry Tag records are unique</description>
        <externalId>true</externalId>
        <inlineHelpText>An external ID field used to ensure that Log Entry Tag records are unique</inlineHelpText>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Log Entry Tag</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tag__c</columns>
        <columns>LogEntry__c</columns>
        <columns>LogLink__c</columns>
        <columns>LogEntryOrigin__c</columns>
        <columns>LogEntryTimestamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LET-{00000}</displayFormat>
        <label>Log Entry Tag Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Entry Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>